# hey-cli

./: Cargo.toml  README.md
src/: cli.rs  main.rs  openai.rs
