[package]
name = "hey"
version = "0.1.1"
edition = "2021"
author = "Christopher Strnad <strnadchristopher@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
futures = "0.3.29"
futures-util = "0.3.29"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json", "stream"]}
reqwest-eventsource = "0.5.0"
reqwest-streams = "0.4.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.12.0", features = ["full"] }
